--- a/index.html
+++ b/index.html
@@ -3,29 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Saikrishna Gandrath</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <img src="profile.jpg" alt="Saikrishna Gandrath" class="profile-photo">
         <h1>SAIKRISHNA GANDRATH</h1>
         <p>DevOps Engineer</p>
     </header>
+
     <section id="about">
-        <h2>About Me</h2>
-        <p>Brief introduction...</p>
+        <h2>Career Objective</h2>
+        <p>Driven DevOps enthusiast blending a solid software development background with hands-on internship experience. Seeking to inject innovation into software delivery practices within a vibrant team environment. With a passion for automating processes and a hunger for continuous growth, I aim to make impactful contributions while embracing new challenges with enthusiasm.</p>
     </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <!-- List skills here -->
+
+    <section id="education">
+        <h2>Education</h2>
+        <p>Graduated from Vagdevi Arts & Science College, Adilabad, Affiliated by Kakatiya University BCA (B.com Computer Applications) 2018-2022</p>
     </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <!-- Showcase projects here -->
+
+    <section id="professional-summary">
+        <h2>Professional Summary</h2>
+        <ul>
+            <li>Have Knowledge on DevOps and AWS engineering, automation, and build and release management.</li>
+            <li>GIT repositories for the automation code and settings in the DevOps environment are maintained.</li>
+            <li>Have Strong Knowledge on containerizing Docker images to test the application and writing Docker files.</li>
+            <li>Knowledge on Kubernetes, EKS and containers, micro services, deployment, and service orchestration.</li>
+            <li>Knowledge on writing Kubernetes Manifest Files such as Pods, Replica Sets, Deployments, Daemon Sets, Stateful Sets, Namespaces, and so on.</li>
+            <li>Have strong Knowledge on configuring Continuous Integration tools like Jenkins and Azure DevOps.</li>
+            <li>Hands-on practice in managing Infrastructure as Code (IaC) using tool called Terraform.</li>
+            <li>Ansible configuration deployment on cloud infrastructure using playbooks, roles, and ad-hoc commands.</li>
+            <li>AWS Environment: EC2, S3, NETWORKING, VPC, RDS, Apache servers, Linux servers.</li>
+            <li>Hands on knowledge in Linux commands and Shell Scripting.</li>
+        </ul>
     </section>
+
+    <section id="internship">
+        <h2>Internship</h2>
+        <p><strong>DevOps engineer intern in Beamx Techlabs PVT LTD Hyderabad, TS (Feb 2024 – May 2024)</strong></p>
+        <ul>
+            <li>Implemented and managed Next.js application deployment with Nginx reverse proxy, PM2, and Forever for Node.js process management, ensuring seamless operation and optimal performance in a Linux environment.</li>
+            <li>Implemented Jenkins pipeline for react, angular and Maven-based Java projects, integrating SonarQube analysis, Docker containerization, deployment to Harbor registry, and monitoring in Prometheus and Grafana, ensuring comprehensive CI/CD with real-time observability.</li>
+            <li>Developed AWS infrastructure components including VPCs, EC2 instances, RDS databases, S3 buckets, and IAM roles using Terraform.</li>
+        </ul>
+    </section>
+
     <section id="contact">
         <h2>Contact</h2>
-        <!-- Contact information -->
+        <p>Phone: +91 9505530254</p>
+        <p>Email: saikrishna38721@gmail.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/saikrishna-gandrathh-639915287" target="_blank">Saikrishna Gandrath</a></p>
     </section>
+
+    <section id="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+            <li><strong>Cloud Platforms:</strong> <img src="aws.png" alt="AWS"> AWS Cloud, <img src="azure.png" alt="Azure"> AZURE Cloud</li>
+            <li><strong>Version Control Systems:</strong> <img src="git.png" alt="Git"> Git</li>
+            <li><strong>CI/CD Tools:</strong> <img src="azure-devops.png" alt="Azure DevOps"> Azure DevOps, <img src="jenkins.png" alt="Jenkins"> Jenkins</li>
+            <li><strong>Containerization Tools:</strong> <img src="docker.png" alt="Docker"> Docker, <img src="kubernetes.png" alt="Kubernetes"> Kubernetes</li>
+            <li><strong>Infrastructure as Code:</strong> <img src="terraform.png" alt="Terraform"> Terraform</li>
+            <li><strong>Configuration Management Tool:</strong> <img src="ansible.png" alt="Ansible"> Ansible</li>
+            <li><strong>Operating Systems:</strong> <img src="linux.png" alt="Linux"> Linux, <img src="windows.png" alt="Windows"> Windows</li>
+            <li><strong>Scripting Languages:</strong> <img src="shell.png" alt="Shell Script"> Shell Script</li>
+        </ul>
+    </section>
+
+    <section id="languages">
+        <h2>Languages</h2>
+        <ul>
+            <li>English</li>
+            <li>Telugu</li>
+            <li>Hindi</li>
+        </ul>
+    </section>
+
+    <section id="strengths">
+        <h2>Strengths</h2>
+        <ul>
+            <li>Time Management</li>
+            <li>Grasping new things</li>
+            <li>Optimistic thinking</li>
+            <li>Mingling in nature</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Saikrishna Gandrath</p>
+    </footer>
 </body>
 </html>
